# text-editor-ai

./: .gitignore  DEPLOYMENT.md  GITHUB_SETUP.md  README.md  index.html
.github/workflows/: api-handler.yml  deploy-backend.yml  deploy-frontend.yml  deploy-railway.yml  deploy.yml
assets/: index-BFj27HVU.css  index-lR5xUsm1.js
backend/: Cargo.toml  env.example
backend/src/: main.rs
frontend/: .eslintrc.cjs  404.html  env.example  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  vite-env.d.ts
frontend/src/components/: LanguageSwitch.tsx
frontend/src/contexts/: LanguageContext.tsx
frontend/src/i18n/: index.ts
frontend/src/i18n/locales/: en.ts  zh.ts
